--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap" rel="stylesheet">
-    <link rel="icon" href="/img/logo.png" type="image/x-icon">
+    <link rel="icon" href="https://i.ibb.co/h9g3B0F/logo.png" type="image/x-icon">
 
     <title>chiaracode</title>
 
     <meta property="og:title" content="ChiaraCode">
     <meta property="og:description" content="Portfolio">
-    <meta property="og:image" content="https://i.ibb.co/NYd5nH0/logo.png">
+    <meta property="og:image" content="https://i.ibb.co/h9g3B0F/logo.png">   
     <meta property="og:url" content="https://chiaracode.netlify.app/">
     <meta property="og:type" content="website">
 
