--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
         <h1>☽ About Me ☾</h1>
         <p>My name is Chiara, I graduated in Languages in the Information Society and participated in the Erasmus
             program in
-            Lisbon, studying in English and Portuguese and developing my thesis on the use of Big Data during the
+            Lisbon, studied English and Portuguese and wrote my thesis on the use of Big Data during the
             pandemic.
             I am currently attending an online study course with start2impact University as Front-End Development
-            to increase my skills in the sector.
+            to improve my skills in the sector.
             My aim is to increase my knowledge of programming languages and practice as much as possible.</p>
     </section>
     <section id="Projects">
@@ -50,7 +50,7 @@
                 href="https://www.start2impact.it/" id="gitst">start2impact.</a>
             Discover my projects on <a href="https://github.com/chiaracode1?tab=repositories"
                 id="gitst"><b>github</b></a> and leave a feedback on my page!
-            In this moment, I'm working on a project with React.</p>
+            At the moment, I'm working on a project with React.</p>
         <div class="img">
             <img width="118" height="118" src="https://img.icons8.com/dusk/128/html-5.png" alt="html-5" />
             <img width="118" height="118" src="https://img.icons8.com/dusk/128/css3.png" alt="css3" />
