--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <img src="img/logo.png">
     </div>
     <section id="Aboutme">
-        <h1>☽ About Me ☾</h1>
+        <h1> About Me </h1>
         <p>My name is Chiara, I graduated in Languages in the Information Society and participated in the Erasmus
             program in
             Lisbon, studied English and Portuguese and wrote my thesis on the use of Big Data during the
@@ -45,7 +45,7 @@
             My aim is to increase my knowledge of programming languages and practice as much as possible.</p>
     </section>
     <section id="Projects">
-        <h1>☽ Projects ☾</h1>
+        <h1> Projects </h1>
         <p id=pr>I'm working on my skill with this languages during my studies with <a
                 href="https://www.start2impact.it/" id="gitst">start2impact.</a>
             Discover my projects on <a href="https://github.com/chiaracode1?tab=repositories"
