--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
             program in
             Lisbon, studied English and Portuguese and wrote my thesis on the use of Big Data during the
             pandemic.
-            I am currently attending an online study course with start2impact University as Front-End Development
-            to improve my skills in the sector.
+            I finished the start2Impact master in Front-End Development and I'm here to improve my skills in the sector.
             My aim is to increase my knowledge of programming languages and practice as much as possible.</p>
     </section>
     <section id="Projects">
@@ -49,8 +48,7 @@
         <p id=pr>I'm working on my skill with this languages during my studies with <a
                 href="https://www.start2impact.it/" id="gitst">start2impact.</a>
             Discover my projects on <a href="https://github.com/chiaracode1?tab=repositories"
-                id="gitst"><b>github</b></a> and leave a feedback on my page!
-            At the moment, I'm working on a project with React.</p>
+                id="gitst"><b>github</b></a> and leave a feedback on my page!</p>
         <div class="img">
             <img width="118" height="118" src="https://img.icons8.com/dusk/128/html-5.png" alt="html-5" />
             <img width="118" height="118" src="https://img.icons8.com/dusk/128/css3.png" alt="css3" />
